--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -1,11 +1,10 @@
 body {
     background-image: url("/images/iteration-1-images/home-banner.png");
     background-repeat: no-repeat;
-    background-size: center;
+    background-size: cover;
     background-position: 50% 100%;
     height: 100vh;
-    margin: 0;
-    padding: 0;
+    width: 100%;
 }
 
 
@@ -16,6 +15,10 @@ body {
     color: #FAF7F2;
     font-size: 14px;
   }
+
+  .home-h1 h1{
+    font-family: 'Barlow', sans-serif;
+  }
   
  
   .home-h2 {
@@ -25,13 +28,13 @@ body {
     align-items: center;
     text-align: center;
     color: #FAF7F2;
-    font-size: 26px;
+    font-size: 30px;
   }
   
   .home-h2 h2 {
     margin: 0;
     font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 100;      
+    font-weight: 300;      
   }
   
   .home-button {
