--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -1,48 +1,63 @@
 body {
-    background-image: url("/images/iteration-1-images/home-banner.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 100%;
-    height: 100vh;
-    width: 100%;
+  background-image: url("/images/iteration-1-images/home-banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 100%;
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
- 
-  .home-h2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #FAF7F2;
-    font-size: 30px;
-  }
-  
-  .home-h2 h2 {
-    margin: 0;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 300;      
-  }
-  
-  .home-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;     
-    margin-top: 20px;        
-  }
-  
-  .home-button button {
-    padding: 10px 20px;
-    margin: 20px;     
-    font-size: 12px;         
-    cursor: pointer;        
-    background-color: #FDC913; 
-    color: black;            
-    border: none;                  
-    border-radius: 30px;
-    width: 120px;  
-  }
-  
-  .home-button button:hover {
-    background-color: #FDC913;
-  }
-  
+
+.home-h1 {
+  display: flex;            
+  justify-content: center;   
+  align-items: center;     
+  height: 100%;           
+}
+
+.home-h1 img {
+  max-width: 100%; 
+  height: auto;
+  margin: 50px;  
+}
+
+.home-h2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #FAF7F2;
+  font-size: 30px;
+  margin-top: 0;
+}
+
+.home-h2 h2 {
+  margin: 0;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+}
+
+.home-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.home-button button {
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 12px;
+  cursor: pointer;
+  background-color: #FDC913;
+  color: black;
+  border: none;
+  border-radius: 30px;
+  width: 120px;
+}
+
+.home-button button:hover {
+  background-color: #FDC913;
+}
