--- a/src/css/OrderPizza.css
+++ b/src/css/OrderPizza.css
@@ -1,3 +1,49 @@
 header {
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #CE2829;
+    height: 150px;
+    text-align: center;
+    padding: 0px 32vw;
 }
+
+.order-header {
+    align-self: flex-start;
+}
+
+.order-header button{
+    background-color: transparent;
+    border: none;
+    color: #FAF7F2;
+    padding: 2px;
+    cursor: pointer;
+    font-family: "Barlow", serif;
+}
+
+.order-header button:last-child{
+    font-weight: bold;
+}
+
+.order-header button:not(:last-child)::after {
+    content: "-";
+    color: #FAF7F2;
+}
+
+header img {
+    display: flex;
+    margin: 20px;
+    align-self: center;
+}
+
+
+
+section {
+    padding: 0px 32vw;
+}
+
+.order-pizza-page {
+    background-image: none;
+    background-color: white;
+  }
