--- a/src/css/OrderPizza.css
+++ b/src/css/OrderPizza.css
@@ -13,6 +13,11 @@ header {
     align-self: flex-start;
 }
 
+.order-header button:not(:last-child)::after {
+    content: "-"; 
+    margin-left: 10px;
+    color: #FAF7F2;
+}
 .order-header button{
     background-color: transparent;
     border: none;
