--- a/src/css/Success.css
+++ b/src/css/Success.css
@@ -4,13 +4,14 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    align-content:center;
     width: 100%;
     height: 100vh;
-    gap: 15vh;
+    gap: 5vh;
 }
 
 .success-page img{
-    margin-top: 60px;
+    margin: 30px 0 0 0;
 }
 .success-message {
     display: flex;
@@ -18,28 +19,80 @@
     justify-content: center;
     align-items: center;
     margin-top: 0;
+    align-content:center
 }
 
 .onay {
-    color: #fff;
-    font-size: 80px;
+    color: #FAF7F2;
+    font-size: 60px;
     font-weight: 200;
-    margin: 0;
-    font-family: "Barlow", serif;
-    letter-spacing: -0.25rem;
+    margin-top: 0;
+    font-family: "Roboto Condensed", serif;
+    letter-spacing: -0.30rem;
 }
 
 .lezzet {
     color: #FDC913;
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 200;
-    margin: 0;
+    margin-top: 0;
     font-family: "Satisfy", serif;
 }
 
 hr {
     border: 0;
-    border-top: 2px solid #fff;
-    width: 140%;
+    border-top: 2px solid #FAF7F2;
+    width: 150%;
+    margin: 30px 0;
+}
+
+.order-sum{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FAF7F2;
+    font-family: "Barlow", serif;
+    align-content:center;
+    margin: 0 20px;
+}
+
+h4{
+    font-size: 18px;
+    margin-bottom: 40px;
+}
+
+.order-selection{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 200px;
+    padding-left: 40px;
+}
+
+h5{
+    font-size: 20px;
+}
+.order-sum-card{
     margin: 20px 0;
-  }
+    gap: 0;
+    border: 1px solid #FAF7F2;
+    border-radius: 5px;
+    padding: 0 50px;
+    width: 100%;
+}
+
+.order-sum-card p:last-of-type {
+    margin-bottom: 40px;
+}
+
+.order-sum-card div{
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+}
+
+.order-sum-card p{
+    margin: 0;
+}
