--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -1,8 +1,8 @@
 body {
   background-image: url("/images/iteration-1-images/home-banner.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 100%;
+  background-repeat: repeat-x;
+  background-size: 100% auto;
+  background-position: top center;
   height: 100vh;
   width: 100%;
   margin: 0;
