--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -53,11 +53,10 @@
     margin-right: 10px;
   }
   
-  .footer-social-icons img,
-  .footer-icons img {
-    width: 20px;
-    height: 20px;
-    margin-bottom: 10px;
+  .footer-social-icons img{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
   }
   
   .footer-social-icons img {
