--- a/src/css/Success.css
+++ b/src/css/Success.css
@@ -43,7 +43,7 @@ hr {
     border: 0;
     border-top: 2px solid #FAF7F2;
     width: 150%;
-    margin: 30px 0;
+    margin: 0;
 }
 
 .order-sum{
@@ -74,25 +74,24 @@ h5{
     font-size: 20px;
 }
 .order-sum-card{
-    margin: 20px 0;
     gap: 0;
     border: 1px solid #FAF7F2;
     border-radius: 5px;
-    padding: 0 50px;
+    padding: 0 20px;
     width: 100%;
 }
 
 .order-sum-card p:last-of-type {
-    margin-bottom: 40px;
+    margin: 10px;
 }
 
 .order-sum-card div{
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
+    display: inline;
 }
 
 .order-sum-card p{
     margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
