--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-image: url("/images/iteration-1-images/home-banner.png");
   background-repeat: repeat-x;
@@ -71,29 +75,105 @@ body {
   margin-bottom: 0;
 }
 
-.icon-items{
+.home-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-top: 77vh;
+  width: 100%;
+  padding-bottom: 50px;
+}
+
+.icon-lists {
+  display: flex;
+  gap: 100px;
   list-style-type: none;
+  padding: 0;
+}
+
+.icon-items {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.icon-items img {
+  width: 40px;
+  height: 40px;
+  gap: 20px;
+}
+
+.icon-items span {
+  font-size: 14px;
+  text-align: center;
+  padding-left: 20px;
+  font-family: 'Barlow', sans-serif;
+  font-weight: 500;
 }
 
 .cards{
   display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 100vh;
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .lezzetus{
   background-image: url("/images/iteration-2-images/cta/kart-1.png");
-  height: 100vh;
   width: 100%;
+  height: 400px;
   background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+
 }
+
+.two-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.hack, .kurye {
+  width: 100%;
+  height: 190px;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+}
+
 .hack{
   background-image: url("/images/iteration-2-images/cta/kart-2.png");
-  height: 100vh;
-  width: 100%;
-  background-repeat: no-repeat;
 }
+
 .kurye{
   background-image: url("/images/iteration-2-images/cta/kart-3.png");
-  height: 100vh;
-  width: 100%;
-  background-repeat: no-repeat;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #FAF7F2;
+  color: #CE2829;
+  border: none;
+  border-radius: 30px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #FAF7F2
 }
