--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -56,7 +56,7 @@ body {
   font-size: 12px;
   cursor: pointer;
   background-color: #FDC913;
-  color: black;
+  color: #292929;
   border: none;
   border-radius: 30px;
   width: 120px;
@@ -82,7 +82,7 @@ body {
   position: absolute;
   margin-top: 77vh;
   width: 100%;
-  padding-bottom: 50px;
+  
 }
 
 .icon-lists {
@@ -112,21 +112,34 @@ body {
   font-weight: 500;
 }
 
-.cards{
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 100vh;
+.home-cta {
+  background-color: #FAF7F2;
   width: 100%;
-  max-width: 100vw;
-  overflow-x: hidden;
+  height: 100%;
+  position: relative;
+  top: -100px;
+  margin-top: 100vh;
 }
 
-.lezzetus{
-  background-image: url("/images/iteration-2-images/cta/kart-1.png");
+.cards {
+  display: flex;
+  justify-content: center; 
+  align-items: center;      
+  gap: 20px;                
   width: 100%;
-  height: 400px;
-  background-repeat: no-repeat;
+  height: 600px;            
+  max-width: 100%;          
+  overflow-x: hidden;
+  padding-top: 100px;
+}
+
+.lezzetus {
+  background-image: url("/images/iteration-2-images/cta/kart-1.png");
+  background-size: cover;
+  width: 100%;               
+  height: 80%;               
+  min-width: 300px;          
+  max-width: 400px;          
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -134,18 +147,27 @@ body {
   text-align: center;
   padding: 20px;
   border-radius: 10px;
-
+  color: #FAF7F2;
 }
 
 .two-cards {
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  flex-direction: column;    
+  gap: 20px;                 
+  width: 100%;
+  max-width: 400px;         
+  margin-left: 20px;         
+}
+
+.hack h2{
+  color: #FAF7F2;
+}
+
+.kurye h2{
+  color: #292929
 }
 
 .hack, .kurye {
-  width: 100%;
-  height: 190px;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -154,15 +176,22 @@ body {
   text-align: center;
   padding: 20px;
   border-radius: 10px;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;               
+  height: 180px;             
 }
 
-.hack{
+.hack {
   background-image: url("/images/iteration-2-images/cta/kart-2.png");
+  color: #FAF7F2;
 }
 
-.kurye{
+.kurye {
   background-image: url("/images/iteration-2-images/cta/kart-3.png");
+  color: #FAF7F2;
 }
+
 
 button {
   padding: 10px 20px;
@@ -176,4 +205,105 @@ button {
 
 button:hover {
   background-color: #FAF7F2
+}
+
+.medium-body p:first-of-type {
+  font-family: "Satisfy", serif;
+  color: #CE2829;
+  display: flex;            
+  justify-content: center;   
+  align-items: center;
+  font-size: 30px;  
+}
+
+.medium-body p:last-of-type {
+  font-family: 'Roboto Condensed', sans-serif;
+  color: #292929;
+  display: flex;            
+  justify-content: center;   
+  align-items: center;
+  font-size: 30px;  
+  font-weight: 500;
+}
+
+.mb-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  padding-bottom: 50px;
+  
+  
+}
+
+.mb-icon-lists {
+  display: flex;
+  gap: 40px;
+  list-style-type: none;
+  padding: 10;
+}
+
+.mb-icon-items {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border-radius: 30px;
+  width: 140px;
+  height: 60px;
+  
+}
+
+
+.md-images {
+  display: flex;                
+  justify-content: center;      
+  align-items: flex-start;      
+  gap: 120px;                   
+  width: 100%;                  
+  flex-wrap: wrap;              
+  margin-top: 20vh;             
+  text-align: center;
+}
+
+.md-images .item {         
+  gap: 10px;
+  background-color: white;
+  padding: 30px;     
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;  
+  align-items: center;      
+}
+
+.md-images .item img {
+  width: 250px;                             
+  height: auto;                            
+  border-radius: 10px;                      
+}
+
+.md-images p, .md-images h4 {
+  font-size: 14px;              
+  color: #292929;   
+  display: flex;                 
+  flex-direction: row;         
+  align-items: center;            
+}
+
+.md-images .item p {
+  gap: 10px;                 
+}
+
+.md-images .item h4 {
+  font-size: 16px;             
+  color: #292929;             
+  margin-bottom: 15px;
+  text-align: left; 
+  gap: 80px;
+}
+
+.md-images .item p span {
+  margin-right: 10px;          
 }
