--- a/src/css/OrderPizza.css
+++ b/src/css/OrderPizza.css
@@ -9,22 +9,31 @@ header {
     padding: 0px 32vw;
 }
 
+.order-pizza-page{
+    background-image: none;
+    background-color: #FAF7F2;
+}
+
 .order-header {
     align-self: flex-start;
+    margin-top: -50px;
 }
 
 .order-header button:not(:last-child)::after {
     content: "-"; 
     margin-left: 10px;
-    color: #FAF7F2;
+    color: blue;
+    
 }
 .order-header button{
     background-color: transparent;
     border: none;
-    color: #FAF7F2;
+    color: black;
     padding: 2px;
     cursor: pointer;
     font-family: "Barlow", serif;
+    
+
 }
 
 .order-header button:last-child{
@@ -38,7 +47,7 @@ header {
 
 header img {
     display: flex;
-    margin: 20px;
+    margin-bottom: 50px;
     align-self: center;
 }
 
@@ -53,6 +62,7 @@ section {
     justify-content: center;
     align-items: space-between;
     font-family: "Barlow", serif;
+    margin-top: 100px;
 }
 
 section h3{
@@ -216,33 +226,33 @@ Form {
 
 .count-order {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 80px;
+    gap: 10px;
 }
 
 .counter{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
-    text-align: center;
+    justify-content: center;
+
 }
 
 .count{
     border: 1px solid #5F5F5F;
-    height: 48px;
-    width: 41px;
+    height: 40px;
+    width: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 }
 
 .counter button {
     background-color: #FDC913;
     border: none;
-    height: 50px;
+    height: 40px;
     width: 40px;
     cursor: pointer;
     border-radius: 5px;
@@ -257,6 +267,7 @@ Form {
     width: 300px;
     padding: 50px;
     border-radius: 10px;
+    margin: 0 auto;
 }
 
 .extra-price,
@@ -316,6 +327,17 @@ Form {
     font-size: 14px;
     font-weight: bold;
     margin-top: 5px;
+  }
+
+  .order-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    border: 1px solid #FDC913;
+    background-color: #FDC913;
+    padding: 20px 20px;
+    border-radius: 40px;
   }
 
   @media (max-width: 768px) {
