--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -4,7 +4,7 @@
 }
 
 .home-page{
-  background-image: url("/images/iteration-1-images/home-banner.png");
+  background-image: url("/images/home-banner.png");
   background-repeat: no-repeat;}
 
 body {
@@ -140,7 +140,7 @@ body {
 }
 
 .lezzetus {
-  background-image: url("/images/iteration-2-images/cta/kart-1.png");
+  background-image: url("/images/kart-1.png");
   background-size: cover;
   width: 100%;               
   height: 80%;               
@@ -189,12 +189,12 @@ body {
 }
 
 .hack {
-  background-image: url("/images/iteration-2-images/cta/kart-2.png");
+  background-image: url("/images/kart-2.png");
   color: #FAF7F2;
 }
 
 .kurye {
-  background-image: url("/images/iteration-2-images/cta/kart-3.png");
+  background-image: url("/images/kart-3.png");
   color: #FAF7F2;
 }
 
